--- a/src/main/resources/templates/product/inStock.html
+++ b/src/main/resources/templates/product/inStock.html
@@ -129,7 +129,7 @@
         Array.from(elementBtn).forEach(btn => {
             btn.addEventListener("click", async (event) => {
                 event.preventDefault()
-                const response = await fetch("http://localhost:8080/cart", {
+                const response = await fetch("http://localhost:8080/cart/add", {
                     method: "PUT",
                     headers: {
                         "Content-Type": "application/json"
