--- a/src/main/resources/templates/component/toast.html
+++ b/src/main/resources/templates/component/toast.html
@@ -1,3 +1,4 @@
-<div class="absolute w-64 h-20 rounded-xl">
-
+<div id="toast" class="fixed flex flex-col p-5 inset-20 w-64 h-20 rounded-xl">
+    <h3 th:text="${title}" class="text-lg font-semibold pb-1.5">Titre</h3>
+    <p th:text="${message}" class="text-base ">Message du toast</p>
 </div>
