--- a/src/main/resources/templates/component/navbar.html
+++ b/src/main/resources/templates/component/navbar.html
@@ -84,6 +84,6 @@
     }
 
     document.getElementById('searchInput').addEventListener('keypress', (e) => {
-        if (e.key === 'Enter') performSearch()
+        if (e.key === 'Enter') onClickSearch()
     })
 </script>
