feat(product): add remove from stock and actualised readme

--- a/src/main/resources/templates/component/navbar.html
+++ b/src/main/resources/templates/component/navbar.html
@@ -4,11 +4,11 @@
              alt="logo TechZone page accueil"/>
     </a>
 
-    <form onsubmit="onClickSearch()"
+    <form
           class="flex items-center p-4 w-full h-[35px] bg-zinc-100 rounded-md row-start-2 col-span-2 md:row-start-1 md:col-start-2 md:col-span-3">
         <input id="searchInput" class="w-full h-[32px] bg-transparent outline-none" type="text"
                placeholder="Rechercher un produit...">
-        <button type="button" onclick="performSearch()">
+        <button type="button" onclick="onClickSearch()">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </form>
@@ -82,8 +82,4 @@
             window.location.href = `/search?query=${encodeURIComponent(query)}`
         }
     }
-
-    document.getElementById('searchInput').addEventListener('keypress', (e) => {
-        if (e.key === 'Enter') onClickSearch()
-    })
 </script>
