--- a/src/main/resources/templates/component/toast.html
+++ b/src/main/resources/templates/component/toast.html
@@ -1,4 +1,5 @@
-<div id="toast" class="fixed flex flex-col p-5 inset-20 w-64 h-20 rounded-xl">
-    <h3 th:text="${title}" class="text-lg font-semibold pb-1.5">Titre</h3>
-    <p th:text="${message}" class="text-base ">Message du toast</p>
+<div id="toast" class="fixed top-6 right-6 z-50 hidden
+flex-col gap-0.5 p-4 w-72 md:w-96 rounded-xl shadow-lg transition-all duration-300">
+    <h3 class="toast-title text-base font-semibold"></h3>
+    <p class="toast-message text-base"></p>
 </div>
