--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -57,8 +57,9 @@
             <div class="flex items-center gap-4">
               <img th:src="${product.urlPhoto}" class="w-12 h-12 object-contain rounded-lg bg-gray-50 border border-gray-100" alt="Img">
               <div class="flex flex-col">
-                <span class="text-sm font-bold text-gray-900" th:text="${product.brand + ' ' + product.model}">Marque Modèle</span>
-                <span class="text-xs text-gray-500 truncate max-w-[200px]" th:text="${product.name}">Nom complet du produit</span>
+                <span class="text-sm font-bold text-gray-900" th:text="${product.name}">Marque Modèle</span>
+                <span class="text-xs text-gray-500 truncate max-w-[200px]" th:text="${product.brand}">Nom complet du produit</span>
+                <span class="text-xs text-gray-500 truncate max-w-[200px]" th:text="${product.model}"></span>
               </div>
             </div>
           </td>
