--- a/src/main/resources/templates/profil/profil.html
+++ b/src/main/resources/templates/profil/profil.html
@@ -92,6 +92,8 @@
     document.addEventListener("DOMContentLoaded", async () => {
         const yearSelect = document.getElementById("year")
         if (yearSelect) {
+            yearSelect.addEventListener("change", updateList);
+
             await fillYearOptions()
             await updateList()
         }
